@@ -1,3 +1,4 @@
+* issue 79: fix parsing of Sardana generated spec files; thanks to DS
 * issue 81: fix parsing materials with space group 47
 * packaging cleanup: remove gitignore and other dev-files
 * issue 77: complete multiprocessing cleanup upon PowderModel.close()
